<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Clouds Music">
    ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="menu_audio">Audio</string>
    <string name="menu_video">Video</string>
    <string name="menu_profile">Profile</string>
    <string name="title_welcome_back">Welcome\nBack</string>
    <string name="title_create_account">Create\nAccount</string>
    <string name="title_reset_pwd">Reset\nPassword</string>
    <string name="login_subtitle">Sign in to continue</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="password_hint">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="menu_my_library">My Library</string>
    <string name="forgot_pwd">Forgot password?</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account_prefix">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="please_wait">Please wait…</string>
    <string name="network_error">We have encountered an issue when processing your request. Please try again later.</string>
    <string name="sig_in_failed">Username or password you have entered is incorrect.</string>
    <string name="invalid_login_params">We could not validate your login details. Please make sure you have filled all empty fields and provided a valid phone number.</string>
    <string name="play_fail">Media cannot be played.</string>
    <string name="download_complete">Download completed</string>
    <string name="download_cancelled">Download cancelled</string>
    <string name="downloading">Downloading…</string>
    <string name="card_payment">Card payment</string>
    <string name="tap_retry">Tap to retry</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="register_legal_prefix"><![CDATA[By continuing you agree to our \nTerms & Conditions and Privacy Policy.]]></string>
    <string name="verify">Verify</string>
    <string name="invalid_phone_number_param">We could not valid your phone number. Please make sure you have filled all empty fields and provided a valid phone number.</string>
    <string name="otp_send_fail">We could not send OTP to your phone number. Please try again later.</string>
    <string name="verify_subtitle_prefix">We have sent an OTP on your number</string>
    <string name="otp_verification_fail">We could not verify OTP you provided. Please recheck and try again.</string>
    <string name="finalize_sign_up">Finalize \nRegistration</string>
    <string name="invalid_password_param">We could not validate your password. Please make sure your have filled all empty fields and password has 6 or more characters.</string>
    <string name="go_to_home">Go to home</string>
    <string name="sign_up_success_feedback">Your account has been successfully created. Enjoy media from</string>
    <string name="save_changes">Save changes</string>
    <string name="close">Close</string>
    <string name="search_audio_video">Search for audio and video</string>
    <string name="edit_my_profile">Update my profile</string>
    <string name="profile_zero_info_headline">Your profile does not have any information. Inorder to provide you with the best services we highly recommend you update your profile.</string>
    <string name="empty" />
    <string name="full_name">Full name</string>
    <string name="enter_full_name">Enter your full name</string>
    <string name="email_address">Email address</string>
    <string name="enter_email_address">Enter your email address</string>
    <string name="physical_address">Physical address</string>
    <string name="enter_physical_address">Enter your current location</string>
    <string name="change_password">Change password</string>
    <string name="my_profile">My \nProfile</string>
    <string name="logout">Logout</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="password_reset_success_feedback">Your password has been reset successfully.</string>
    <string name="sample_content_price">TSh 1,000</string>
    <string name="sample_content_name">Sample content name</string>
    <string name="sample_artist_name">Oli Loop, Inc.</string>
    <string name="tap_to_retry">Tap to retry!</string>
    <string name="currency">TSh</string>
    <string name="buy_now">Buy Now</string>
    <string name="seek_time_0">00.00</string>
    <string name="title_onboarding_welcome">Welcome to &appname;!</string>
    <string name="subtitle_onboarding_welcome">All your favorite Gospel music contents in one place.</string>
    <string name="title_onboarding_buy">Buy and make it your own</string>
    <string name="subtitle_onboarding_buy">"Search, listen and buy gospel music from leading artists. It's very very simple."</string>
    <string name="title_onboarding_account">Registration made easy</string>
    <string name="subtitle_onboarding_account">Don\'t have an account? Don\'t worry, you can create your account in just 3 simple steps. Click the create account button now!</string>
    <string name="create_account">Create account</string>
    <string name="or">OR</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_payment">Payment</string>
    <string name="title_select_wallet">Select Wallet</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="buy">Buy</string>
    <string name="m_pesa">M-PESA</string>
    <string name="tigo_pesa">Tigo pesa</string>
    <string name="sample_phone_number">0627653478</string>
    <string name="phone_number">Phone Number</string>
    <string name="invalid_payment_params">We could not validate your payment details. Please make sure you have filled all empty fields and provided a valid phone number.</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
</resources>
