<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/AppTheme.ToolbarTheme"
            app:popupTheme="@style/AppTheme.AppBarOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_16dp"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_32dp"
                android:textSize="@dimen/dimen_36sp"
                android:textColor="@color/colorAccent"
                android:fontFamily="@font/roboto_regular"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/dimen_24dp">

                <ImageView
                    android:id="@+id/profile_img"
                    android:layout_width="@dimen/dimen_80dp"
                    android:layout_height="@dimen/dimen_80dp"
                    android:contentDescription="@string/empty"
                    android:background="@drawable/img_view_primary_bordered_light"
                    android:layout_marginEnd="@dimen/dimen_8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_8dp"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/dimen_14sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginBottom="@dimen/dimen_2dp"
                        android:text="@string/mobile"
                        android:textAllCaps="true"/>

                    <TextView
                        android:id="@+id/phone_number_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textColorPrimary"
                        android:textSize="@dimen/dimen_14sp"
                        android:lines="1"
                        android:ellipsize="end"
                        android:textAllCaps="true"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginBottom="@dimen/dimen_8dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:background="@drawable/button_primary_dark"
                        android:padding="@dimen/dimen_4dp">

                        <Button
                            android:id="@+id/update_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_28dp"
                            android:foreground="?selectableItemBackground"
                            android:textSize="@dimen/dimen_12sp"
                            android:textColor="@color/textColorPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/change_password"
                            android:background="@drawable/button_primary_dark"
                            style="?buttonBarButtonStyle"
                            tools:targetApi="m"
                            android:textAllCaps="false"
                            android:layout_weight="1"
                            android:textStyle="bold"
                            tools:ignore="UnusedAttribute"
                            android:layout_marginEnd="@dimen/dimen_8dp"/>

                        <View
                            android:layout_width="@dimen/dimen_2dp"
                            android:layout_height="@dimen/dimen_18dp"
                            android:background="@color/textColorPrimary"/>

                        <Button
                            android:id="@+id/logout"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen_28dp"
                            android:foreground="?selectableItemBackground"
                            android:textSize="@dimen/dimen_12sp"
                            android:textColor="@color/textColorPrimary"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/logout"
                            android:background="@drawable/button_primary_dark"
                            style="?buttonBarButtonStyle"
                            tools:targetApi="m"
                            android:textStyle="bold"
                            android:textAllCaps="false"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/dimen_8dp"
                            tools:ignore="UnusedAttribute" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/full_name"/>

            <EditText
                android:id="@+id/name_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/textColorPrimary"
                android:textCursorDrawable="@null"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_full_name"
                android:textColorHint="@color/textColorPrimary"
                android:inputType="textPersonName"
                android:background="@drawable/profile_input_bg"
                android:layout_marginBottom="@dimen/dimen_16dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/email_address"/>

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/textColorPrimary"
                android:textCursorDrawable="@null"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_email_address"
                android:textColorHint="@color/textColorPrimary"
                android:inputType="textEmailAddress"
                android:background="@drawable/profile_input_bg"
                android:layout_marginBottom="@dimen/dimen_16dp"
                tools:ignore="Autofill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/dimen_14sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:text="@string/physical_address"/>

            <EditText
                android:id="@+id/physical_address_edt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_40dp"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/textColorPrimary"
                android:textCursorDrawable="@null"
                android:paddingStart="@dimen/dimen_16dp"
                android:paddingEnd="@dimen/dimen_16dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/enter_physical_address"
                android:textColorHint="@color/textColorPrimary"
                android:inputType="textCapSentences"
                android:background="@drawable/profile_input_bg"
                android:layout_marginBottom="@dimen/dimen_16dp"
                tools:ignore="Autofill" />

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>