<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_24dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/title_welcome_back"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimen_36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorPrimary"
                android:lineSpacingExtra="@dimen/dimen_3dp"
                android:textSize="@dimen/dimen_16sp"
                android:text="@string/login_subtitle"
                android:layout_marginBottom="@dimen/dimen_24dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/dimen_2dp"
                app:cardPreventCornerOverlap="true"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="@dimen/dimen_12dp">

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:padding="@dimen/dimen_16dp"
                   android:background="@color/colorPrimaryDark">

                   <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="@dimen/dimen_8dp">

                       <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                           android:id="@+id/country_code_picker"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           app:ccp_textSize="@dimen/dimen_14sp"
                           app:ccp_showFlag="false"
                           app:ccp_backgroundColor="@color/colorPrimaryDark"
                           app:ccp_dialogTextColor="@color/textColorPrimary"
                           app:ccp_setCountryByTimeZone="true"
                           app:ccp_selectionDialogShowSearch="false"
                           app:ccp_textColor="@color/textColorPrimary"
                           android:layout_centerVertical="true"/>

                       <EditText
                           android:id="@+id/phone_number"
                           android:layout_toEndOf="@id/country_code_picker"
                           android:layout_width="match_parent"
                           android:layout_height="@dimen/dimen_50dp"
                           android:inputType="number|phone"
                           android:textSize="@dimen/dimen_14sp"
                           android:lines="1"
                           android:maxLength="@integer/phone_number_length"
                           android:textCursorDrawable="@null"
                           android:backgroundTint="@color/textColorPrimary"
                           android:textColor="@color/textColorPrimary"
                           android:textColorHint="@color/textColorPrimary"
                           android:importantForAutofill="no"
                           tools:ignore="LabelFor"
                           android:layout_centerVertical="true"
                           android:hint="@string/phone_number_hint"/>
                       
                   </RelativeLayout>

                   <EditText
                       android:id="@+id/password"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/dimen_50dp"
                       android:inputType="textPassword"
                       android:textSize="@dimen/dimen_14sp"
                       android:textColor="@color/textColorPrimary"
                       android:textColorHint="@color/textColorPrimary"
                       android:importantForAutofill="no"
                       tools:ignore="LabelFor"
                       android:textCursorDrawable="@null"
                       android:backgroundTint="@color/textColorPrimary"
                       android:lines="1"
                       android:hint="@string/password_hint"
                       android:drawablePadding="@dimen/dimen_16dp"
                       android:drawableEnd="@drawable/ic_baseline_visibility_off"
                       android:layout_marginBottom="@dimen/dimen_16dp"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:gravity="center_vertical"
                       android:layout_marginBottom="@dimen/dimen_16dp">

                       <com.google.android.material.switchmaterial.SwitchMaterial
                           android:id="@+id/persist_entry_button"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:textColor="@color/textColorPrimary"
                           app:thumbTint="@android:color/white"
                           app:trackTint="@color/colorAccent"
                           android:layoutDirection="rtl"
                           app:switchPadding="@dimen/dimen_4dp"
                           android:fontFamily="@font/roboto_regular"
                           android:text="@string/remember_me"
                           android:textSize="@dimen/dimen_14sp"
                           android:gravity="start|center_vertical"/>

                       <TextView
                           android:id="@+id/reset_pwd_button"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:textColor="@color/textColorPrimary"
                           android:textSize="@dimen/dimen_14sp"
                           android:fontFamily="@font/roboto_regular"
                           android:text="@string/forgot_pwd"
                           android:gravity="end"/>

                   </LinearLayout>
                   
                   <Button
                       android:id="@+id/login_button"
                       android:layout_width="match_parent"
                       android:layout_height="@dimen/dimen_40dp"
                       style="?buttonBarButtonStyle"
                       android:foreground="?selectableItemBackground"
                       tools:ignore="UnusedAttribute"
                       android:textStyle="bold"
                       android:fontFamily="@font/roboto_regular"
                       android:textSize="@dimen/dimen_14sp"
                       android:textColor="@color/colorPrimary"
                       android:text="@string/sign_in"
                       android:layout_marginBottom="@dimen/dimen_16dp"
                       android:background="@drawable/button_accent_curved"/>

                   <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:orientation="horizontal"
                       android:gravity="center_horizontal">

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textColor="@color/textColorPrimary"
                           android:textSize="@dimen/dimen_14sp"
                           android:fontFamily="@font/roboto_regular"
                           android:text="@string/no_account_prefix"
                           android:layout_marginEnd="@dimen/dimen_4dp"/>

                       <TextView
                           android:id="@+id/sign_up_button"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:textColor="@color/textColorPrimary"
                           android:textSize="@dimen/dimen_14sp"
                           android:fontFamily="@font/roboto_regular"
                           android:textStyle="bold"
                           android:text="@string/sign_up"/>

                   </LinearLayout>

               </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>