<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:contentDescription="@string/empty"
        android:layout_marginBottom="@dimen/dimen_12dp"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:textSize="@dimen/dimen_18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/textColorPrimary"
        android:layout_marginBottom="@dimen/dimen_4dp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_14sp"
        android:textColor="@color/textColorPrimary"
        android:lineSpacingExtra="2dp"
        android:gravity="center"
        android:paddingStart="@dimen/dimen_32dp"
        android:paddingEnd="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_4dp"
        android:layout_marginBottom="@dimen/dimen_24dp"/>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="center">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40dp"
            style="?buttonBarButtonStyle"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_14sp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_accent_curved"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/create_account"
            android:alpha="0.7"
            android:textAllCaps="false"
            android:layout_margin="@dimen/dimen_16dp"
            android:paddingStart="@dimen/dimen_24dp"
            android:paddingEnd="@dimen/dimen_24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_weight="1"
                android:background="@color/textColorPrimary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_14sp"
                android:textColor="@color/textColorPrimary"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:layout_marginEnd="@dimen/dimen_8dp"
                android:textStyle="bold"
                android:text="@string/or"/>

            <View
                android:layout_width="@dimen/dimen_24dp"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_weight="1"
                android:background="@color/textColorPrimary"/>

        </LinearLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40dp"
            style="?buttonBarButtonStyle"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_14sp"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/button_accent_curved"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sign_in"
            android:alpha="0.7"
            android:textAllCaps="false"
            android:layout_margin="@dimen/dimen_16dp"
            android:paddingStart="@dimen/dimen_24dp"
            android:paddingEnd="@dimen/dimen_24dp"/>

    </LinearLayout>

</LinearLayout>
